--- a/Chatbot/requirements.txt
+++ b/Chatbot/requirements.txt
@@ -6,12 +6,12 @@ Automat==0.5.0
 channels==1.0.3
 constantly==15.1.0
 daphne==1.0.3
-Django==1.10.6
+django>=1.11.19
 incremental==16.10.1
 oauthlib==2.0.1
 packaging==16.8
 pyparsing==2.2.0
-requests==2.13.0
+requests>=2.20.0
 requests-oauthlib==0.8.0
 six==1.10.0
 Twisted==17.1.0
